# rez-3dequalizer

./: CMakeLists.txt  README.md  install.sh  package.py
config/: 3dequalizer.in
